--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prop-types": "latest",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "classnames": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
